[tool.poetry]
name = "try_kedro_mlflow_jupyter"
version = "0.1.0"
description = "experiment environment"
authors = ["amagaeru"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.1.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
mlflow = "^1.12.1"
kedro = "^0.16.6"
jupyterlab = "^2.2.9"
kedro-viz = "^3.7.0"
lightgbm = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
